--- a/src/style/layout.less
+++ b/src/style/layout.less
@@ -20,3 +20,110 @@
     }
   }
 }
+
+//List列表样式
+.lists{
+  padding-top: 10px;
+  padding-bottom: 14px;
+  .list_title{
+    display: flex;
+    justify-content: space-between;
+    .list_name{
+      font-size: 15px;
+      color: #000000;
+    }
+    .list_normalLable{
+      color: #ffffff;
+      background: #ff6450;
+      border-radius: 4px;
+      font-size: 11px;
+      line-height: 16px;
+      padding: 0px 4px;
+      margin-right: 7px;
+    }
+    .list_vipLable{
+      color: #ffffff;
+      background: #C7AD83;
+      border-radius: 4px;
+      font-size: 11px;
+      line-height: 16px;
+      height: 16px;
+      padding: 0px 4px;
+      margin-left: 7px;
+      i{
+        display: inline-block;
+        width: 13px;
+        height: 13px;
+        position: relative;
+        top: 2px;
+        left: -1px;
+        background:#ffffff url("../images/crown1.png") no-repeat;
+        background-size: 100%;
+      }
+    }
+    .list_rewardTip{
+      font-size: 12px;
+      color: #717171;
+    }
+  }
+  .list_content{
+    margin-top: 10px;
+    display: flex;
+    justify-content: space-between;
+    .list_rate{
+      line-height: 36px;
+      height: 36px;
+      font-size: 24px;
+      color: #ff6450;
+      &>span{
+        font-size: 15px;
+      }
+    }
+    .list_intervals{
+      font-size: 20px;
+      color: #1d1d1d;
+      line-height: 36px;
+      height: 36px;
+      &>span{
+        font-size: 13px;
+      }
+    }
+    .list_remark{
+      color: #717171;
+      font-size: 11px;
+      display: block;
+      margin-top: 5px;
+    }
+    .list_yyBtn{
+      font-size: 12px;
+      line-height: 30px;
+      border: 1px solid #ff6450;
+      color: #ff6450;
+      border-radius: 5px;
+      margin-top: 10px;
+      padding: 0 7px;
+    }
+  }
+  .list_bottom{
+    margin-top: 10px;
+    .list_commonLabel{
+      font-size: 11px;
+      color: #ff6450;
+      border: 1px solid #ff6450;
+      border-radius: 4px;
+      padding: 0 3px;
+      i{
+        display: inline-block;
+        width: 16px;
+        height:16px;
+        position: relative;
+        top: 4px;
+        border-radius: 4px;
+        left: -3px;
+        background:#ff6450 url("../images/fire2.png") no-repeat;
+        background-size: 100%;
+        right: 10px;
+      }
+    }
+  }
+}
