--- a/src/style/product.less
+++ b/src/style/product.less
@@ -25,6 +25,18 @@
       font-size: 16px;
       color: #1d1d1d;
       line-height: 44px;
+      position: relative;
+      padding-left: 9px;
+      &:before{
+        display: block;
+        content: '';
+        position: absolute;
+        left: 0;
+        top: 15px;
+        width: 4px;
+        height: 16px;
+        background: #4d7bff;
+      }
     }
     span{
       line-height: 44px;
