--- a/src/style/layout.less
+++ b/src/style/layout.less
@@ -1,3 +1,4 @@
+//tab栏样式
 .horizontalLists{
   width: 100%;
   height: 100%;
@@ -74,9 +75,36 @@
         background-size: 100%;
       }
     }
+    .list_garyVipLable{
+      background: #aaaaaa;
+      i{
+        background:#ffffff url("../images/crown2.png") no-repeat;
+        background-size: 100%;
+      }
+    }
+    .list_interest{
+      font-size: 11px;
+      color: #717171;
+      padding-left: 10px;
+    }
+    .list_garyInterest{
+      color: #aaaaaa;
+    }
     .list_rewardTip{
       font-size: 12px;
       color: #717171;
+    }
+    .list_attron{
+      position: relative;
+      top: -14px;
+      width: 47px;
+      height: 22px;
+      color: #ffffff;
+      background: url("../images/product_transfer.png") no-repeat;
+      background-size: 100%;
+      text-align: center;
+      font-size: 11px;
+      line-height: 22px;
     }
   }
   .list_content{
@@ -99,6 +127,7 @@
       font-size: 20px;
       color: #1d1d1d;
       line-height: 36px;
+      text-align: center;
       height: 36px;
       &>span{
         font-size: 13px;
@@ -119,11 +148,13 @@
     .list_yyBtn{
       font-size: 12px;
       line-height: 30px;
+      width: 68px;
       border: 1px solid #ff6450;
       color: #ff6450;
       border-radius: 5px;
       margin-top: 10px;
-      padding: 0 7px;
+      text-align: center;
+      float: right;
     }
     .list_garyYyBtn{
       color: #aaaaaa;
