--- a/src/style/product.less
+++ b/src/style/product.less
@@ -45,3 +45,12 @@
     }
   }
 }
+.click_more{
+  text-align: center;
+  font-size: 16px;
+  line-height: 44px;
+  border-top: 1px solid #e0e0e0;
+  background: #ffffff;
+  margin-top: -14px;
+  color: #aaaaaa;
+}
